--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     ================================================== -->
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/skills.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
 
@@ -138,28 +141,76 @@
                     </div>
                 </div> <!-- about-info -->
 
-   <section id="skills" class="s-skills target-section">
-    <div class="row about-expertise" data-animate-block>
-        <div class="column lg-12">
-            <h2 class="text-pretitle" data-animate-el>Skills</h2>
-            <ul class="skills-list h1" data-animate-el>
-                <!-- Core -->
-                <li>React.js</li>
-                <li>JavaScript</li>
-                <li>HTML & CSS</li>
-                <!-- Additional -->
-                <li>Python</li>
-                <li>UI Design</li>
-                <li>REST APIs</li>
-                <!-- Tools -->
-                <li>Git</li>
-                <li>Figma</li>
-                <li>VS Code</li>
-            </ul>
-        </div>
-    </div>
-</section>
 
+                <section id="skills" class="s-skills target-section">
+        <div class="row">
+            <div class="column lg-12">
+                <h2 class="text-pretitle" data-animate-el>
+                    Skills & Technologies
+                </h2>
+            </div>
+        </div>
+        <div class="row" data-animate-block>
+            <div class="column lg-12">
+                <div class="skills-grid">
+                    <div class="skill-item">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5" class="skill-icon">
+                        <p class="skill-name">HTML</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3" class="skill-icon">
+                        <p class="skill-name">CSS</p>
+                    </div>
+                    <div class="skill-item">
+                        <svg class="skill-icon" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M9 13.7q1.4-5.6 7-5.6c5.6 0 6.3 4.2 9.1 4.9q2.8.7 4.9-2.1-1.4 5.6-7 5.6c-5.6 0-6.3-4.2-9.1-4.9q-2.8-.7-4.9 2.1Zm-7 8.4q1.4-5.6 7-5.6c5.6 0 6.3 4.2 9.1 4.9q2.8.7 4.9-2.1-1.4 5.6-7 5.6c-5.6 0-6.3-4.2-9.1-4.9q-2.8-.7-4.9 2.1Z" fill="#38bdf8" />
+                        </svg>
+                        <p class="skill-name">TAILWIND CSS</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="Bootstrap" class="skill-icon">
+                        <p class="skill-name">BOOTSTRAP</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" alt="SASS" class="skill-icon">
+                        <p class="skill-name">SASS</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" class="skill-icon">
+                        <p class="skill-name">JAVASCRIPT</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React" class="skill-icon">
+                        <p class="skill-name">REACT JS</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" class="skill-icon">
+                        <p class="skill-name">GITHUB</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js" class="skill-icon">
+                        <p class="skill-name">NODE JS</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="Figma" class="skill-icon">
+                        <p class="skill-name">FIGMA</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" alt="MongoDB" class="skill-icon">
+                        <p class="skill-name">MONGODB</p>
+                    </div>
+                    <div class="skill-item">
+                        <div class="skill-icon" style="display: flex; align-items: center; justify-content: center;">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor">
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"/>
+                            </svg>
+                        </div>
+                        <p class="skill-name">UI/UX</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
                     </div>
                 </div> <!-- end about-expertise -->
