--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
     <link rel="stylesheet" href="css/skills.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>/* Make animation elements visible by default */
+[data-animate-el], [data-animate-block] {
+  opacity: 1 !important;
+  visibility: visible !important;
+  transform: none !important;
+}
+
+.text-pretitle, .text-huge-title, .attention-getter {
+  display: block !important;
+}
+        </style>
 
 </head>
 
