--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
     <link rel="stylesheet" href="css/skills.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+  /* Force all headings and text to be visible */
+  .text-pretitle, 
+   
+  .attention-getter,
+  [data-animate-el],
+  [data-animate-block] {
+    opacity: 1 !important;
+    visibility: visible !important;
+    display: block !important;
+    transform: none !important;
+  }
+</style>
 
 </head>
 
@@ -148,9 +161,7 @@
                 <h2 class="text-pretitle" data-animate-el>
                     Skills & Technologies
                 </h2>
-                <h1 class="text-huge-title" data-animate-el>
-                    My Technical Stack
-                </h1>
+                
                 <p class="attention-getter" data-animate-el>
                     Here are the technologies I work with to bring ideas to life
                 </p>
