--- a/index.html
+++ b/index.html
@@ -21,17 +21,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
   /* Force all headings and text to be visible */
-  .text-pretitle, 
-   
-  .attention-getter,
-  [data-animate-el],
-  [data-animate-block] {
+#skills h2.text-pretitle, 
+#skills p.attention-getter {
     opacity: 1 !important;
     visibility: visible !important;
     display: block !important;
     transform: none !important;
-  }
-</style>
+}
 
 </head>
 
