Add new Resume link

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <strong>Let's build something amazing together!</strong>
 </p>
 
-                            <a href="https://drive.google.com/file/d/17jjKkVvv5wRvBMowPZ7jS84euSERNzVP/view?usp=sharing" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                            <a href="https://drive.google.com/file/d/1tNbXr_gwaidXQDZHKwQtWBF6Xc0bKktF/view?usp=drive_link" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
                         </div>
                     </div>
