--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
 
                 <div class="row about-info wide" data-animate-block>
 
-                    <div class="column lg-6 md-4 about-info__pic-block">
+                    <div class="column lg-6 md-4 about-info__pic-block ">
                         <!-- Removed image section -->
+                         <img src="images\prof.jpg" alt="About Me" class="about-info__pic ml-2">
                     </div>
 
                     <div class="column lg-6 md-12">
