--- a/index.html
+++ b/index.html
@@ -397,22 +397,35 @@
                 </div> <!-- end contact-top -->
 
                 <div class="row contact-bottom">
-                    <div class="column lg-3 md-5 tab-6 stack-on-550 contact-block">
-                        <h3 class="text-pretitle">Reach-Me At</h3>
+                    <div class="column lg-4 md-6 contact-block">
+                        <h3 class="text-pretitle">Reach Me At</h3>
                         <p class="contact-links">
-                            <a href="mailto:faizan.m.patel10@gmail.com" class="mailtoui">faizan.m.patel10@gmail.com</a> <br>
-                            <a href="tel:+1975432345">+918805910192</a>
+                            <a href="mailto:faizan.m.patel10@gmail.com" class="mailtoui">
+                                <i class="bi bi-envelope"></i> faizan.m.patel10@gmail.com
+                            </a><br>
+                            <a href="tel:+918805910192">
+                                <i class="bi bi-telephone"></i> +918805910192
+                            </a>
                         </p>
                     </div>
-                    <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
+                    <div class="column lg-4 md-6 contact-block">
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
-                            <li><a href="https://github.com/FAIZAN101013">GitHub</a></li>
-                            <br>
-                        <li><a href="https://www.linkedin.com/in/faizan-patel-6939821b5/">Linkdin</a></li>
-                        <br>
-                        <li><a href="https://leetcode.com/u/I9ERYn6IQy/">leetCode</a></li>
-                        <br>
+                            <li>
+                                <a href="https://github.com/FAIZAN101013" target="_blank">
+                                    <i class="bi bi-github"></i> GitHub
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/faizan-patel-6939821b5/" target="_blank">
+                                    <i class="bi bi-linkedin"></i> LinkedIn
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://leetcode.com/u/I9ERYn6IQy/" target="_blank">
+                                    <i class="bi bi-code-slash"></i> LeetCode
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
