updated the adout section

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                                 About
                             </h2>
                            <p class="attention-getter" data-animate-el>
-    <strong>Hi there!</strong> I'm a creative developer who loves building engaging digital experiences. With a focus on modern web technologies, I enjoy crafting clean interfaces and efficient solutions.
-    <br><br>
-    My toolkit includes <strong>React</strong>, <strong>JavaScript</strong>, and <strong>Python</strong>. I'm passionate about creating seamless user experiences while maintaining clean, well-structured code.
-    <br><br>
+                            <strong>Hi there!</strong> I'm a creative developer passionate about building engaging and user-friendly digital experiences. I specialize in modern web technologies and love turning ideas into clean, interactive interfaces.
+                            <br><br>
+                            My toolkit includes <strong>React</strong>, <strong>JavaScript</strong>, <strong>Python</strong>, and <strong>Figma</strong>—which I use for designing intuitive UI/UX flows before bringing them to life in code. I’m dedicated to crafting seamless user experiences backed by clean, well-structured code.
+                            <br><br>
     <strong>Let's build something amazing together!</strong>
 </p>
 
@@ -284,6 +284,17 @@
                         </h2>
 
                        <div class="timeline" data-animate-el>
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <h4 class="timeline__title">Eniacworld Media Pvt ltd</h4>
+                                <h5 class="timeline__meta">UI/UX and React.js Intern | 28 March 2025 – 30 May 2025</h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>Contributed to the development of a travel website and CRM, delivering responsive UIs and scalable
+                                    backend APIs with React.js and Express.js. Worked on the TrekingMantra website and CRM.</p>
+                            </div>
+                        </div>
 
     <div class="timeline__block">
         <div class="timeline__bullet"></div>
