Added design projects

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                            <p class="attention-getter" data-animate-el>
                             <strong>Hi there!</strong> I'm a creative developer passionate about building engaging and user-friendly digital experiences. I specialize in modern web technologies and love turning ideas into clean, interactive interfaces.
                             <br><br>
-                            My toolkit includes <strong>React</strong>, <strong>JavaScript</strong>, <strong>Python</strong>, and <strong>Figma</strong>—which I use for designing intuitive UI/UX flows before bringing them to life in code. I’m dedicated to crafting seamless user experiences backed by clean, well-structured code.
+                            My toolkit includes <strong>React</strong>, <strong>JavaScript</strong>, <strong>Python</strong>, and <strong>Figma</strong>—which I use for designing intuitive UI/UX flows before bringing them to life in code. I'm dedicated to crafting seamless user experiences backed by clean, well-structured code.
                             <br><br>
     <strong>Let's build something amazing together!</strong>
 </p>
@@ -363,7 +363,6 @@
                         </div> <!-- end timeline -->
                         
                     </div> <!-- end column -->
-
 
                 </div> <!-- end about-timelines -->
 
